syntax = "proto3";

package api;

import "google/protobuf/empty.proto";

option go_package = "dzhordano/132market/services/users/internal/interface/api/grpc/pb/user_v1;user_v1";

service UserServiceV1 {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc FindUserById(FindUserByIdRequest) returns (FindUserByIdResponse);
    rpc FindAllUsers(google.protobuf.Empty) returns (FindAllUsersResponse);
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
}

message UserInfo {
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserRequest {
    UserInfo info = 1;
}

// TODO МБ убрать возврат фулл инфы юзера, мб норм...
message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    UserInfo info = 1;
}

message UpdateUserResponse {
    User user = 1;
}

message FindUserByIdRequest {
    string id = 1;
}

message FindUserByIdResponse {
    User user = 1;
}

message FindAllUsersResponse {
    repeated User users = 1;
}

message DeleteUserRequest {
    string id = 1;
}
