syntax = "proto3";

package users;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "users/internal/pkg/users_v1;users_v1";

service UsersV1 {
    rpc Create(CreateUserRequest) returns (CreateUserResponse);
    rpc Update(UpdateUserRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty);
    rpc Get(GetUserRequest) returns (GetUserResponse);
    rpc List(ListUsersRequest) returns (ListUsersResponse);
}

message UserInfo {
    string name = 1;
    string email = 2;
    string password = 3;
}

message AccountState {
    string state = 1;
    google.protobuf.Timestamp at = 2;
}

message User {
    string uuid = 1;
    UserInfo user = 2;
    string role = 3;
    bool verified = 4;
    string status = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp last_seen = 7;
    AccountState account_state = 8;
}

message UpdateUserInfo {
    google.protobuf.StringValue name = 1;
    google.protobuf.StringValue email = 2;
    google.protobuf.StringValue password = 3;
    google.protobuf.StringValue role = 4;
    google.protobuf.BoolValue verified = 5;
    google.protobuf.StringValue status = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp last_seen = 8;
    google.protobuf.StringValue account_state = 9;
}

message CreateUserRequest {
    UserInfo info = 1;
}

// TODO: Think on what is correct here.
message CreateUserResponse {
    string uuid = 1;
}

message UpdateUserRequest {
    string uuid = 1;
    UpdateUserInfo info = 2;
}

message DeleteUserRequest {
    string uuid = 1;
}

message GetUserRequest {
    string uuid = 1;
}

message GetUserResponse {
    User user = 1;
}

message ListUsersRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message ListUsersResponse {
    repeated User users = 1;
}